fix: patch bakong-khqr for Cloudflare Pages builds, fix CORS, simplify API URL detection
- Add postinstall script (patch-bakong-khqr.js) to auto-fix strict-mode issues in bakong-khqr
- Add 5-minute QR expiry timestamp
- Fix CORS: allow OPTIONS preflight, PATCH method, all headers
- Change update API method from PATCH to PUT to match backend
- Simplify API URL detection for Cloudflare Pages
- Remove service fee